--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-awesome-reveal": "^4.2.5",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.21.3",
     "react-router-hash-link": "^2.4.3",
